After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755433 - grl_pls_browse_sync() is not introspectable
grl_pls_browse_sync() is not introspectable
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-09-22 18:08 UTC by Xavier Claessens
Modified: 2015-09-23 13:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pls: annotate that filter_func can be NULL (1.69 KB, patch)
2015-09-22 18:08 UTC, Xavier Claessens
committed Details | Review

Description Xavier Claessens 2015-09-22 18:08:01 UTC
grl_pls_browse_sync doesn't have a user_data argument to pass to filter_func. It should also be annotated with (allow-none).
Comment 1 Xavier Claessens 2015-09-22 18:08:21 UTC
Created attachment 311897 [details] [review]
pls: annotate that filter_func can be NULL
Comment 2 Bastien Nocera 2015-09-23 10:49:32 UTC
Review of attachment 311897 [details] [review]:

Looks good for master and 0.2.x branches.
Comment 3 Bastien Nocera 2015-09-23 13:33:08 UTC
Attachment 311897 [details] pushed as 0b5e0a7 - pls: annotate that filter_func can be NULL