pls: annotate that filter_func can be NULL

https://bugzilla.gnome.org/show_bug.cgi?id=755433